Changed to Java10 Removed some deprecated method calls